--- a/index.html
+++ b/index.html
@@ -1,24 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
- 
+
     <title>Festi-Fab</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-   <section id="festifab">
-   <a href="#"><img src="images/logo.festifab.png" class="logo" alt=""></a>
-    <div> <ul id="navbar">      
-    <li><a class="active" href="#">Home</a></li>
-    <li> <a href="#">About</a></li>
-    <li><a href="#">Workshops</a></li>
-   <li><a href="#">Agenda</a></li>
-    <li><a href="#">Sponsors</a></li>
-    <li><a href="#">FAQ</a></li>
-    <li><a href="#">Contact us</a></li>
-</ul> </div>
-          
-       
-   </section>
+    <section id="festifab">
+        <a href="#"><img src="images/logo.festifab.png" class="logo" alt=""></a>
+        <div>
+            <ul id="navbar">
+                <li><a class="active" href="#">Home</a></li>
+                <li> <a href="#">About</a></li>
+                <li><a href="#">Workshops</a></li>
+                <li><a href="#">Agenda</a></li>
+                <li><a href="#">Sponsors</a></li>
+                <li><a href="#">FAQ</a></li>
+                <li><a href="#">Contact us</a></li>
+            </ul>
+        </div>
+
+
+    </section>
+    <section id="home">
+
+        <div class="container first-container">
+            <div>
+                <div class="image1"><img src="images/Rectangle 29.png" alt=""></div>
+                <div class="image2"><img src="images/Line 8.png" alt=""></div>
+                <div class="image3"><img src="images/Capture 2.png" alt=""></div>
+                <div class="image4"><img src="images/play.png" alt=""></div>
+                <div class="col-lg-6 text-start">
+                    <div class="hero-content text-start">
+                        <h1 class="home-title"><span style="color:#FFD301;">F</span><span
+                                style="color:#25CED1;">e</span><span style="color:#A7E0E1;">s</span><span
+                                style="color:#005F73;">t</span><span style="color:#25CED1;">i</span><span
+                                style="color:#FFD301;">-</span><span style="color:#FFD301;">F</span><span
+                                style="color:#25CED1;">a</span><span style="color:#F2F3F4;">b</span><span
+                                style="color:#FFD301;"> :</span></h1>
+                        <h1 class="home-title2" style="color:#25CED1;">Where You Meet IOT</h1>
+                    </div>
+                    <div class="d-flex flex-row">
+                        <div class="iconhero1"><img src="images/Vector.png" alt=""></div>
+                        <div class="icontexthero1">
+                            <p> Location , ESI Algiers</p>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-row" id="flexrow1">
+                        <div class="iconhero2"><img src="images/clock.png" alt=""></div>
+                        <div class="icontexthero2">
+                            <p>December 22th to 25th 2022</p>
+                        </div>
+                    </div>
+
+                    <button class="buttonhero">Register Now</button>
+                    </a>
+                </div>
+    </section>
 </body>
+
 </html>
