--- a/index.html
+++ b/index.html
@@ -59,6 +59,30 @@
                     <button class="buttonhero">Register Now</button>
                 </div>
     </section>
+    <section class="faq-container" id="faq">
+
+        <div class="faq-item1">
+            <div class="faq-question1">
+                <p>what is iot ?</p>
+            </div>
+        </div>
+        <div class="faq-item2">
+            <div class="faq-question2">
+                <p>What willi gain from particioating ?</p>
+            </div>
+        </div>
+        <div class="faq-item3">
+            <div class="faq-question3">
+                <p>is it for free ?</p>
+            </div>
+        </div>
+        <div class="faq-item4">
+            <div class="faq-question4">
+                <p>what is esms ?</p>
+            </div>
+        </div>
+
+    </section>
 
 </body>
 
