--- a/index.html
+++ b/index.html
@@ -59,6 +59,42 @@
                     <button class="buttonhero">Register Now</button>
                 </div>
     </section>
+    <section id="about">
+        <div id="intro">
+
+            <h2>What is Festi-Fab?</h2><br>
+            <p>
+                The Festi-FAB, as its name suggests, is a long weekend dedicated to a technological festival:
+                fair, workshops and conferences in the field of the Internet of Things, which is none other than the
+                automation of industrial activities. ,
+                agricultural or other of the daily life of day laborers.
+            </p>
+        </div>
+        <div id="details">
+            <ul>
+                <li>Introduce new technologies to the public</li>
+                <li>Exploit the FAB-LAB of ESi </li>
+                <li>propose technical solutions for automation problems in the various economic fields.</li>
+                <li>Enable participants to improve their knowledge network</li>
+                <li>Attract the attention of start-ups and companies to encourage them to invest in IOT</li>
+            </ul>
+        </div>
+        <div id="cse">
+            <p>The CSE (ESI Scientific Club) is a student club of the Ecole Nationale Supérieure Computer Science of
+                Algiers (ESI).
+                It has existed for 14 years for students passionate about IT, technology,robotics, design and other
+                fields technologies.
+                The CSE has significant weight at the national level through the various events and activities
+                that he organizes, especially since he is the organizer of the 1st hackathon in Algeria.
+                The CSE is considered one of the most active in the student communityschool or university level
+                Algerian.</p>
+        </div>
+        <div id="cse2">
+            <p> At cse,we orgnize various and high quality tech events, through which we aim to best fit our
+                community needs and to provide a skillful and complete acquirement of knowledge for the technology
+                ensthusiats</p>
+        </div>
+    </section>
     <section class="faq-container" id="faq">
 
         <div class="faq-item1">
