--- a/index.html
+++ b/index.html
@@ -119,6 +119,22 @@
         </div>
 
     </section>
+    <section id="contact-us">
+        <div>
+            <div class="motFin1">
+                <p>still have questions about ?</p>
+            </div>
+            <div class="motFin2">
+                <p><span style="color:#FFD301;">c</span>ontact <span style="color:#FFD301;">u</span>s! </p>
+            </div>
+            <div class="image5"><img src="images/CSE-logo.png" alt=""></div>
+
+            <div class="contact">
+            </div>
+
+        </div>
+
+    </section>
 
 </body>
 
