--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
         <a href="#"><img src="images/logo.festifab.png" class="logo" alt=""></a>
         <div>
             <ul id="navbar">
-                <li><a class="active" href="#">Home</a></li>
-                <li> <a href="#">About</a></li>
-                <li><a href="#">Workshops</a></li>
-                <li><a href="#">Agenda</a></li>
-                <li><a href="#">Sponsors</a></li>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="#">Contact us</a></li>
+                <li><a class="active" href="#hero">Home</a></li>
+                <li> <a href="#about">About</a></li>
+                <li><a href="#workshops">Workshops</a></li>
+                <li><a href="#agenda">Agenda</a></li>
+                <li><a href="#sponsors">Sponsors</a></li>
+                <li><a href="#faq">FAQ</a></li>
+                <li><a href="#contact-us">Contact us</a></li>
             </ul>
         </div>
 
 
     </section>
-    <section id="home">
+    <section id="hero">
 
         <div class="container first-container">
             <div>
@@ -59,7 +59,7 @@
                     <button class="buttonhero">Register Now</button>
                 </div>
     </section>
-    <section id="about">
+    <section class="about-container" id="about">
         <div id="intro">
 
             <h2>What is Festi-Fab?</h2><br>
@@ -95,26 +95,43 @@
                 ensthusiats</p>
         </div>
     </section>
+
+    <section class="agenda-container" id="agenda">
+        <div class="oval">
+            <h1 style="background-color: #25CED1;">here is when the fun begins !</h1>
+            <p style="background-color: #25CED1;">We saved the best for last, the last day of Festi-FAB will be a fair
+                that
+                presents solutions and projects
+                that have a relationship with IOT, start-ups and clubs that will present their activities and work ,
+                it's a
+                great opportunity to find internships in companies, meet people or even get inspired for your PFE or
+                your
+                start-up idea, be present.</p>
+        </div>
+        <div class="image7"><img src="images/flech.png" alt=""></div>
+    </section>
+
     <section class="faq-container" id="faq">
 
         <div class="faq-item1">
             <div class="faq-question1">
-                <p>what is iot ?</p>
+                <p style="background-color: rgba(0, 95, 115, 0.17);">
+                    what is iot ?</p>
             </div>
         </div>
         <div class="faq-item2">
             <div class="faq-question2">
-                <p>What willi gain from particioating ?</p>
+                <p style="background-color: rgba(0, 95, 115, 0.17);">What willi gain from particioating ?</p>
             </div>
         </div>
         <div class="faq-item3">
             <div class="faq-question3">
-                <p>is it for free ?</p>
+                <p style="background-color: rgba(0, 95, 115, 0.17);">is it for free ?</p>
             </div>
         </div>
         <div class="faq-item4">
             <div class="faq-question4">
-                <p>what is esms ?</p>
+                <p style="background-color: rgba(0, 95, 115, 0.17);">what is esms ?</p>
             </div>
         </div>
 
@@ -127,7 +144,7 @@
             <div class="motFin2">
                 <p><span style="color:#FFD301;">c</span>ontact <span style="color:#FFD301;">u</span>s! </p>
             </div>
-            <div class="image5"><img src="images/CSE-logo.png" alt=""></div>
+            <div class="image5"><img src="images/cselogo.png" alt=""></div>
 
             <div class="contact">
             </div>
