--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
     </section>
 
     <section class="agenda-container" id="agenda">
+
+
         <div class="oval">
             <h1 style="background-color: #25CED1;">here is when the fun begins !</h1>
             <p style="background-color: #25CED1;">We saved the best for last, the last day of Festi-FAB will be a fair
@@ -109,6 +111,77 @@
                 start-up idea, be present.</p>
         </div>
         <div class="image7"><img src="images/flech.png" alt=""></div>
+
+        <div class="case1">
+
+            <div class="date">
+                <p style="background-color: #F2F5F5;"> 22 Dec 2 0 2 2 </p>
+            </div>
+
+            <div class="program">
+                <p>
+                    1:00 PM 1:30 PM Opening Ceremony <br>
+                    1:30 PM 2:15 PM Conf1: How the Internet of Things will improve our lives and our economy<br>
+                    2:00 PM 3:15 PM Conf2: introduction to 3d printing<br>
+                    3:00 PM 3:45 PM Conf3: Internet of Things and IT Security
+                </p>
+            </div>
+        </div>
+
+        <div class="case2">
+
+            <div class="date">
+                <p style="background-color: #F2F5F5;"> 23 Dec 2 0 2 2 </p>
+            </div>
+
+            <div class="program">
+                <p>
+                    18:30 AM 9:00 AM Check-In<br>
+                    9:00 AM 12:00 PM 3D design workshop<br>
+                    12:45 PM 2:30 PM jomo3a pray<br>
+                    2:30 PM 4:30 PM Python & C++ workshop
+                </p>
+            </div>
+        </div>
+
+        <div class="case3">
+
+            <div class="date">
+                <p style="background-color: #F2F5F5;"> 24 Dec 2 0 2 2 </p>
+            </div>
+
+            <div class="program">
+                <p>
+                    8:30 AM 9:00 AM Check-In<br>
+                    9:00 AM 12:00 PM Arduino & Raspberry pi workshop<br>
+                    12:00 PM 1:30 PM break+launch<br>
+                    1:30 PM 4:30 PM 3D printing workshop
+                </p>
+            </div>
+        </div>
+
+        <div class="case4">
+
+            <div class="date">
+                <p style="background-color: #F2F5F5;"> 25 Dec 2 0 2 2 </p>
+            </div>
+
+            <div class="program">
+                <p>
+                    09:30 AM 10:00 AM Opening Ceremony<br>
+                    10:00 AM 12:00 PM Exhibitions<br>
+                    01:00 PM 04:00 PM Exhibitions<br>
+                    04:00 PM 04:30 PM Closing Ceremony
+                </p>
+            </div>
+        </div>
+
+        <div class="ellipse2">
+            <div class="text-ell">
+                <p style="background-color: #FFD301;">AGENDA</p>
+            </div>
+        </div>
+
     </section>
 
     <section class="faq-container" id="faq">
