--- a/index.html
+++ b/index.html
@@ -95,6 +95,46 @@
                 ensthusiats</p>
         </div>
     </section>
+    <section id="workshop">
+        <div class="part1">
+            <p>1 : how the iOT will improve our lives and economy ?</p>
+        </div>
+        <div class="text3">
+            <p>A panel that will focus on the definition of IOT, its use in daily life in the name of: smart houses
+                (smart houses) and how will serve people and put<br> them under comfort, and its use in the industrial
+                field
+                (controls manufacturing machines, printing damaged parts, replacing humans<br> with machines in certain
+                activities, etc.) and agriculture (for example,designing an intelligent watering system).</p>
+        </div>
+
+        <div class="part2">
+            <p>2 : introduction to 3D printing </p>
+        </div>
+        <div class="text4">
+            <p>A panel that will focus on 3d printing: its historical aspect, the steps to print a good part that will
+                satisfy<br> the customer and that will be functional, the problems that prevent this technology from
+                developing in Algeria,<br> and its usefulness especially in the 'industry.</p>
+        </div>
+
+        <div class="part3">
+            <p>3 : internet of things and computer security</p>
+        </div>
+        <div class="text5">
+            <p>This conference will talk about one of the areas of use of the IOT: computer security. How it started,
+                how hackers exploit these microprocessors<br> to create viruses and control your machine remotely, what
+                is
+                the relationship between IOT and networks,<br> all these questions will be answered in this conference.
+            </p>
+        </div>
+
+        <div class="ellipse1">
+            <div class="text-ell1">
+                <p style="background-color: #FFD301;">conferences</p>
+            </div>
+        </div>
+
+
+    </section>
 
     <section class="agenda-container" id="agenda">
 
