--- a/index.html
+++ b/index.html
@@ -259,8 +259,7 @@
             </div>
             <div class="image5"><img src="images/cselogo.png" alt=""></div>
 
-            <div class="contact">
-            </div>
+            <div class="contact"><img src="images/socials.png" alt=""></div>
 
         </div>
 
