--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 ensthusiats</p>
         </div>
     </section>
-    <section id="workshop">
+    <section id="workshops">
         <div class="part1">
             <p>1 : how the iOT will improve our lives and economy ?</p>
         </div>
