--- a/index.html
+++ b/index.html
@@ -264,6 +264,20 @@
         </div>
 
     </section>
+    <section class="sign-in">
+        <div class="form-btn">
+            <button class="s-btn">Register Now !</button>
+        </div>
+        <div class="sign-in-page">
+            <form >
+                <input type="first name" placeholder="'First name'">
+                <input type="email" placeholder="'Email'">
+            </form>
+        </div>
+        <button type="submit" class="btn">Send</button>
+           
+        
+    </section>
 
 </body>
 
