--- a/index.html
+++ b/index.html
@@ -224,6 +224,21 @@
 
     </section>
 
+    <section class="sign-in">
+        <div class="form-btn">
+            <button class="s-btn">Register Now !</button>
+        </div>
+        <div class="sign-in-page">
+            <form>
+                <input type="first name" placeholder="'First name'">
+                <input type="email" placeholder="'Email'">
+            </form>
+        </div>
+        <button type="submit" class="btn">Send</button>
+
+
+    </section>
+
     <section class="faq-container" id="faq">
 
         <div class="faq-item1">
@@ -249,6 +264,7 @@
         </div>
 
     </section>
+
     <section id="contact-us">
         <div>
             <div class="motFin1">
