--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <li><a href="#workshops">Workshops</a></li>
                 <li><a href="#agenda">Agenda</a></li>
                 <li><a href="#sponsors">Sponsors</a></li>
+                <li><a href="#sign-in">Sign In</a></li>
                 <li><a href="#faq">FAQ</a></li>
                 <li><a href="#contact-us">Contact us</a></li>
             </ul>
