--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
                 agricultural or other of the daily life of day laborers.
             </p>
         </div>
+        <div class="imgflesh1"><img src="images/Groupflesh .png" alt=""></div>
         <div id="details">
+            <h2>why festi-fab? </h2><br>
             <ul>
                 <li>Introduce new technologies to the public</li>
                 <li>Exploit the FAB-LAB of ESi </li>
@@ -80,7 +82,9 @@
                 <li>Attract the attention of start-ups and companies to encourage them to invest in IOT</li>
             </ul>
         </div>
+        <div class="imgCse"><img src="images/cselogo.png" alt=""></div>
         <div id="cse">
+            <h2>what is CSE ?</h2><br>
             <p>The CSE (ESI Scientific Club) is a student club of the Ecole Nationale Supérieure Computer Science of
                 Algiers (ESI).
                 It has existed for 14 years for students passionate about IT, technology,robotics, design and other
@@ -90,7 +94,9 @@
                 The CSE is considered one of the most active in the student communityschool or university level
                 Algerian.</p>
         </div>
+        <div class="imgflesh2"><img src="images/Groupflesh .png" alt=""></div>
         <div id="cse2">
+            <h2>CSE’s Events </h2><br>
             <p> At cse,we orgnize various and high quality tech events, through which we aim to best fit our
                 community needs and to provide a skillful and complete acquirement of knowledge for the technology
                 ensthusiats</p>
