--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
                                 style="color:#25CED1;">e</span><span style="color:#A7E0E1;">s</span><span
                                 style="color:#005F73;">t</span><span style="color:#25CED1;">i</span><span
                                 style="color:#FFD301;">-</span><span style="color:#FFD301;">F</span><span
-                                style="color:#25CED1;">a</span><span style="color:#F2F3F4;">b</span><span
-                                style="color:#FFD301;"> :</span></h1>
+                                style="color:#25CED1;">a</span><span style="color:#F2F3F4;">b</span></h1>
                         <h1 class="home-title2" style="color:#25CED1;">Where You Meet IOT</h1>
                     </div>
                     <div class="d-flex flex-row">
@@ -269,6 +268,8 @@
                 <p style="background-color: rgba(0, 95, 115, 0.17);">what is esms ?</p>
             </div>
         </div>
+        <div class="imgflesh3"><img src="images/doubleflesh.png" alt=""></div>
+        <div class="imgflesh4"><img src="images/doubleflesh.png" alt=""></div>
 
     </section>
 
