--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <p style="background-color: #FFD301;">conferences</p>
             </div>
         </div>
-
+        <div class="imgflesh7"><img src="images/Groupflesh.png" alt=""></div>
 
     </section>
 
@@ -242,7 +242,8 @@
             </form>
         </div>
         <button type="submit" class="btn">Send</button>
-
+        <div class="imgflesh5"><img src="images/triangle-diag.png" alt=""></div>
+        <div class="imgflesh6"><img src="images/triangle-diag2.png" alt=""></div>
 
     </section>
 
